Fixing button breaking the spacing when there is no sponsor

--- a/resources/assets/components/LedeBanner/lede-banner.scss
+++ b/resources/assets/components/LedeBanner/lede-banner.scss
@@ -24,7 +24,7 @@
   .header__signup {
     padding-top: $base-spacing;
 
-    .button {
+    .button.-float {
       float: left;
     }
   }
